update website for github pages

--- a/docs/_posts/2021-09-30-verifying-hs256.md
+++ b/docs/_posts/2021-09-30-verifying-hs256.md
@@ -1,12 +1,12 @@
 ---
-title: "Accepted Form of JWTs"
+title: "Verifying with HS256"
 categories:
   - documentation
 tags:
   - docs
   - jwt
-  - form
-  - accepted
+  - verify
+  - hs256
 ---
 ![npm](https://img.shields.io/npm/v/jwt-authn?style=for-the-badge&logo=npm)
 ![npm bundle size](https://img.shields.io/bundlephobia/min/jwt-authn?style=for-the-badge&logo=npm)
@@ -22,25 +22,22 @@ tags:
 [link to npm](https://www.npmjs.com/package/jwt-authn)
 # jwt-authn
 
-## Accepted Form of JWTs
+## **hs256Verify(jwt, passphrase, passphraseEncoding)**
 
 [Full Documentation]({{ site.baseurl }}{% link _posts/2021-09-25-full-documentation.md %})
 
-**This package is for dealing with JWTs of the form [JWS JSON Compact Serialization](https://tools.ietf.org/html/rfc7515#section-7.1):**
+* jwt: the signed JWT (JSON Web Token) that you're trying to verify.
+* passphrase: the passphrase used when signing with HMAC (HS256).
+* passphraseEncoding: (optional) if specified and available, the encoding is used to read the passphrase. Otherwise, base64url encoding is assumed.
 
-*[hint: read the two vertical bars/pipes "||" as AND operators.](https://tools.ietf.org/html/rfc7515#section-1.1)
+```js
+import { hs256Verify } from "jwt-authn";
 
-```
-BASE64URL(UTF8(JWS Protected Header)) || '.' ||
-BASE64URL(JWS Payload) || '.' ||
-BASE64URL(JWS Signature)
+const passphrase = "AyM1SysPpbyDfgZld3umj1qzKObwVMkoqQ-EstJQLr_T-1qS0gZH75aKtMN3Yj0iPS4hcgUuTwjAzZr1Z9CAow";
 
-Ex:
-eyJ0eXAiOiJKV1QiLA0KICJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJqb2UiLA0KICJleHAiOjEzMDA4MTkzODAsDQogImh0dHA6Ly9leGFtcGxlLmNvbS9pc19yb290Ijp0cnVlfQ.dBjftJeZ4CVP-mB92K27uhbUJU1p1r_wW1gFWFOEjXk
+const encoded = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJqb2UiLCJleHAiOjEzMDA4MTkzODAsImh0dHA6Ly9leGFtcGxlLmNvbS9pc19yb290Ijp0cnVlfQ.lliDzOlRAdGUCfCHCPx_uisb6ZfZ1LRQa0OJLeYTTpY";
 
-  where:
-    JWS Protected Header: '{"typ":"JWT",\r\n "alg":"HS256"}'
-    JWS Payload: '{"iss":"joe",\r\n "exp":1300819380,\r\n "http://example.com/is_root":true}'
-    JWS Signature: HS256(ASCII(BASE64URL(UTF8(JWS Protected Header)) || '.' ||
-       BASE64URL(JWS Payload))) = dBjftJeZ4CVP-mB92K27uhbUJU1p1r_wW1gFWFOEjXk
+hs256Verify(encoded, passphrase)
+
+// expected output: true
 ```
