--- a/docs/_posts/2021-09-30-license.md
+++ b/docs/_posts/2021-09-30-license.md
@@ -1,12 +1,11 @@
 ---
-title: "Accepted Form of JWTs"
+title: "License"
 categories:
-  - documentation
+  - license
 tags:
-  - docs
-  - jwt
-  - form
-  - accepted
+  - license
+  - mit-modern-variant
+  - mit
 ---
 ![npm](https://img.shields.io/npm/v/jwt-authn?style=for-the-badge&logo=npm)
 ![npm bundle size](https://img.shields.io/bundlephobia/min/jwt-authn?style=for-the-badge&logo=npm)
@@ -22,25 +21,12 @@ tags:
 [link to npm](https://www.npmjs.com/package/jwt-authn)
 # jwt-authn
 
-## Accepted Form of JWTs
+## License
 
 [Full Documentation]({{ site.baseurl }}{% link _posts/2021-09-25-full-documentation.md %})
 
-**This package is for dealing with JWTs of the form [JWS JSON Compact Serialization](https://tools.ietf.org/html/rfc7515#section-7.1):**
+![NPM](https://img.shields.io/npm/l/jwt-authn?&style=for-the-badge&logo=npm)
 
-*[hint: read the two vertical bars/pipes "||" as AND operators.](https://tools.ietf.org/html/rfc7515#section-1.1)
+[MIT-Modern-Variant](https://spdx.org/licenses/MIT-Modern-Variant.html)
 
-```
-BASE64URL(UTF8(JWS Protected Header)) || '.' ||
-BASE64URL(JWS Payload) || '.' ||
-BASE64URL(JWS Signature)
-
-Ex:
-eyJ0eXAiOiJKV1QiLA0KICJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJqb2UiLA0KICJleHAiOjEzMDA4MTkzODAsDQogImh0dHA6Ly9leGFtcGxlLmNvbS9pc19yb290Ijp0cnVlfQ.dBjftJeZ4CVP-mB92K27uhbUJU1p1r_wW1gFWFOEjXk
-
-  where:
-    JWS Protected Header: '{"typ":"JWT",\r\n "alg":"HS256"}'
-    JWS Payload: '{"iss":"joe",\r\n "exp":1300819380,\r\n "http://example.com/is_root":true}'
-    JWS Signature: HS256(ASCII(BASE64URL(UTF8(JWS Protected Header)) || '.' ||
-       BASE64URL(JWS Payload))) = dBjftJeZ4CVP-mB92K27uhbUJU1p1r_wW1gFWFOEjXk
-```
+[MIT](https://choosealicense.com/licenses/mit/)
