--- a/docs/_posts/2021-09-30-signing-hs256.md
+++ b/docs/_posts/2021-09-30-signing-hs256.md
@@ -1,12 +1,12 @@
 ---
-title: "Accepted Form of JWTs"
+title: "Signing with HS256"
 categories:
   - documentation
 tags:
   - docs
   - jwt
-  - form
-  - accepted
+  - sign
+  - hs256
 ---
 ![npm](https://img.shields.io/npm/v/jwt-authn?style=for-the-badge&logo=npm)
 ![npm bundle size](https://img.shields.io/bundlephobia/min/jwt-authn?style=for-the-badge&logo=npm)
@@ -22,25 +22,32 @@ tags:
 [link to npm](https://www.npmjs.com/package/jwt-authn)
 # jwt-authn
 
-## Accepted Form of JWTs
+## **hs256Sign(headerPayload, key)**
 
 [Full Documentation]({{ site.baseurl }}{% link _posts/2021-09-25-full-documentation.md %})
 
-**This package is for dealing with JWTs of the form [JWS JSON Compact Serialization](https://tools.ietf.org/html/rfc7515#section-7.1):**
+* headerPayload: The combined base64url(header) and base64url(payload) separated by a ".".
+* key: The signing key or passphrase.
 
-*[hint: read the two vertical bars/pipes "||" as AND operators.](https://tools.ietf.org/html/rfc7515#section-1.1)
+ ```javascript
+import { hs256Sign, createHeaderPayload } from "jwt-authn";
 
-```
-BASE64URL(UTF8(JWS Protected Header)) || '.' ||
-BASE64URL(JWS Payload) || '.' ||
-BASE64URL(JWS Signature)
+const decodedHeader = { typ: "JWT", alg: "HS256" };
+const decodedPayload = {
+  iss: "joe",
+  exp: 1300819380,
+  "http://example.com/is_root": true,
+};
+const passphrase =
+  "AyM1SysPpbyDfgZld3umj1qzKObwVMkoqQ-EstJQLr_T-1qS0gZH75aKtMN3Yj0iPS4hcgUuTwjAzZr1Z9CAow";
 
-Ex:
-eyJ0eXAiOiJKV1QiLA0KICJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJqb2UiLA0KICJleHAiOjEzMDA4MTkzODAsDQogImh0dHA6Ly9leGFtcGxlLmNvbS9pc19yb290Ijp0cnVlfQ.dBjftJeZ4CVP-mB92K27uhbUJU1p1r_wW1gFWFOEjXk
+const headerPayload = createHeaderPayload(
+  decodedHeader,
+  decodedPayload
+);
 
-  where:
-    JWS Protected Header: '{"typ":"JWT",\r\n "alg":"HS256"}'
-    JWS Payload: '{"iss":"joe",\r\n "exp":1300819380,\r\n "http://example.com/is_root":true}'
-    JWS Signature: HS256(ASCII(BASE64URL(UTF8(JWS Protected Header)) || '.' ||
-       BASE64URL(JWS Payload))) = dBjftJeZ4CVP-mB92K27uhbUJU1p1r_wW1gFWFOEjXk
+const sig = hs256Sign(headerPayload, passphrase);
+
+// expected output
+// "lliDzOlRAdGUCfCHCPx_uisb6ZfZ1LRQa0OJLeYTTpY"
 ```
